--- a/talconfig.yaml
+++ b/talconfig.yaml
@@ -5,8 +5,14 @@ kubernetesVersion: v1.30.1
 
 endpoint: https://192.168.1.4:6443
 allowSchedulingOnMasters: true
-#cniConfig:
-#  name: none
+cniConfig:
+  name: none
+
+patches:
+  - |-
+    cluster:
+      proxy:
+        disabled: true
 
 nodes:
   - hostname: homeserver
