--- a/kubernetes/infra/controller/kube-system/cilium/kustomization.yaml
+++ b/kubernetes/infra/controller/kube-system/cilium/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - release.yaml
 configMapGenerator:
   - name: cilium-values
+    namespace: kube-system
     files:
       - values.yaml=cilium-values.yaml
 configurations:
