add namespace to configMapGenerator in traefik kustomization

--- a/kubernetes/infra/controller/traefik/kustomization.yaml
+++ b/kubernetes/infra/controller/traefik/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - release.yaml
 configMapGenerator:
   - name: traefik-values
+    namespace: traefik
     files:
       - values.yaml=traefik-values.yaml
 configurations:
