--- a/talconfig.yaml
+++ b/talconfig.yaml
@@ -25,7 +25,19 @@ nodes:
     nameservers:
       - 1.1.1.1
       - 8.8.8.8
-#    machineDisks:
-#      - device: /dev/disk/by-id/ata-CT2000MX500SSD1_2405E895C800
-#        partitions:
-#          - mountpoint: /var/openebs/local
+    machineDisks:
+      - device: /dev/disk/by-id/ata-CT2000MX500SSD1_2405E895C800
+        partitions:
+          - mountpoint: /var/openebs/local
+    patches:
+      - |-
+        machine:
+          kubelet:
+            extraMounts:
+              - destination: /var/openebs/local
+                type: bind
+                source: /var/openebs/local
+                options:
+                  - bind
+                  - rshared
+                  - rw
