--- a/kubernetes/infra/controller/openebs/namespace.yaml
+++ b/kubernetes/infra/controller/openebs/namespace.yaml
@@ -4,3 +4,4 @@ metadata:
   name: openebs
   labels:
     kustomize.toolkit.fluxcd.io/prune: disabled
+    pod-security.kubernetes.io/enforce: privileged
