add test deployment

--- a/kubernetes/apps/hello-test/deployment.yaml
+++ b/kubernetes/apps/hello-test/deployment.yaml
@@ -17,4 +17,8 @@ spec:
     spec:
       containers:
         - name: hello-world
+          command:
+            - tail
+            - -f
+            - /dev/null
           image: hello-world
