update observability namespace

--- a/kubernetes/infra/controller/observability/namespace.yaml
+++ b/kubernetes/infra/controller/observability/namespace.yaml
@@ -3,4 +3,5 @@ kind: Namespace
 metadata:
   name: observability
   labels:
+    pod-security.kubernetes.io/enforce: privileged
     kustomize.toolkit.fluxcd.io/prune: disabled
