--- a/kubernetes/infra/controller/observability/kube-prometheus-stack-values.yaml
+++ b/kubernetes/infra/controller/observability/kube-prometheus-stack-values.yaml
@@ -1,3 +1,17 @@
 kubelet:
   serviceMonitor:
-    cAdvisorMetricRelabelings: []
+    metricRelabelings:
+      - action: replace
+        sourceLabels:
+          - node
+        targetLabel: instance
+
+prometheus-node-exporter:
+  serviceMonitor:
+    relabelings:
+      - action: replace
+        regex: (.*)
+        replacement: $1
+        sourceLabels:
+          - __meta_kubernetes_pod_node_name
+        targetLabel: kubernetes_node
