update prometheus values

--- a/kubernetes/infra/controller/observability/kube-prometheus-stack-values.yaml
+++ b/kubernetes/infra/controller/observability/kube-prometheus-stack-values.yaml
@@ -15,3 +15,7 @@ prometheus-node-exporter:
         sourceLabels:
           - __meta_kubernetes_pod_node_name
         targetLabel: kubernetes_node
+
+kube-state-metrics:
+  serviceMonitor:
+    honorLabels: true
