--- a/kubernetes/infra/controller/csr-approver/kustomization.yaml
+++ b/kubernetes/infra/controller/csr-approver/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - release.yaml
 configMapGenerator:
   - name: kubelet-csr-approver-helm-values
+    namespace: flux-system
     files:
       - values.yaml=approver-values.yaml
 configurations:
