--- a/kubernetes/apps/plex/service.yaml
+++ b/kubernetes/apps/plex/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: plex-service
-  namespace: default
+  namespace: plex
   labels:
     app: plex
 spec:
