--- a/talconfig.yaml
+++ b/talconfig.yaml
@@ -5,6 +5,10 @@ kubernetesVersion: v1.30.1
 
 endpoint: https://192.168.1.4:6443
 allowSchedulingOnMasters: true
+additionalMachineCertSans:
+  - boomerok.dev
+additionalApiServerCertSans:
+  - boomerok.dev
 cniConfig:
   name: none
 
