add persistence to monitoring

--- a/kubernetes/infra/controller/observability/kustomization.yaml
+++ b/kubernetes/infra/controller/observability/kustomization.yaml
@@ -4,6 +4,8 @@ resources:
   - namespace.yaml
   - repository.yaml
   - release.yaml
+  - volumes/pv.yaml
+  - volumes/pvc.yaml
 configMapGenerator:
   - name: kube-prometheus-stack-values
     namespace: observability
