add persistence to monitoring

--- a/kubernetes/infra/controller/observability/volumes/pv.yaml
+++ b/kubernetes/infra/controller/observability/volumes/pv.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: alertmanager-pv
+  namespace: observability
   labels:
     app: alertmanager
 spec:
@@ -17,6 +18,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: grafana-pv
+  namespace: observability
   labels:
     app: grafana
 spec:
@@ -32,6 +34,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: prometheus-pv
+  namespace: observability
   labels:
     app: prometheus
 spec:
