--- a/kubernetes/infra/controller/observability/volumes/pvc.yaml
+++ b/kubernetes/infra/controller/observability/volumes/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: alertmanager-pvc
+  namespace: observability
   labels:
     app: alertmanager
 spec:
@@ -18,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc
+  namespace: observability
   labels:
     app: grafana
 spec:
@@ -34,6 +36,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: prometheus-pvc
+  namespace: observability
   labels:
     app: prometheus
 spec:
