--- a/kubernetes/infra/controller/observability/kube-prometheus-stack-values.yaml
+++ b/kubernetes/infra/controller/observability/kube-prometheus-stack-values.yaml
@@ -1,24 +1,24 @@
-alertmanager:
-  alertmanagerSpec:
-    storage:
-      volumeClaimTemplate:
-        spec:
-          accessModes: ["ReadWriteOnce"]
-          selector:
-            matchLabels:
-              app: alertmanager
+#alertmanager:
+#  alertmanagerSpec:
+#    storage:
+#      volumeClaimTemplate:
+#        spec:
+#          accessModes: ["ReadWriteOnce"]
+#          selector:
+#            matchLabels:
+#              app: alertmanager
 
 grafana:
   persistence:
     enabled: true
     existingClaim: grafana-pvc
 
-prometheus:
-  prometheusSpec:
-    storageSpec:
-      volumeClaimTemplate:
-        spec:
-          accessModes: ["ReadWriteOnce"]
-          selector:
-            matchLabels:
-              app: prometheus
+#prometheus:
+#  prometheusSpec:
+#    storageSpec:
+#      volumeClaimTemplate:
+#        spec:
+#          accessModes: ["ReadWriteOnce"]
+#          selector:
+#            matchLabels:
+#              app: prometheus
