enable persistence for prometheus

--- a/kubernetes/infra/controller/observability/kube-prometheus-stack-values.yaml
+++ b/kubernetes/infra/controller/observability/kube-prometheus-stack-values.yaml
@@ -13,12 +13,12 @@ grafana:
     enabled: true
     existingClaim: grafana-pvc
 
-#prometheus:
-#  prometheusSpec:
-#    storageSpec:
-#      volumeClaimTemplate:
-#        spec:
-#          accessModes: ["ReadWriteOnce"]
-#          selector:
-#            matchLabels:
-#              app: prometheus
+prometheus:
+  prometheusSpec:
+    storageSpec:
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          selector:
+            matchLabels:
+              app: prometheus
