--- a/kubernetes/apps/node/deployment.yaml
+++ b/kubernetes/apps/node/deployment.yaml
@@ -15,6 +15,10 @@ spec:
     spec:
       containers:
         - name: node
+          command:
+            - tail
+            - -f
+            - /dev/null
           image: node
           volumeMounts:
             - mountPath: /node
