--- a/kubernetes/apps/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/mitmproxy/deployment.yaml
@@ -27,6 +27,9 @@ spec:
             - containerPort: 8081
               protocol: TCP
           volumeMounts:
+            - name: mitmproxy-config
+              mountPath: /home/mitmproxy/.mitmproxy/config.yaml
+              subPath: .mitmproxy/config.yaml
             - name: mitmproxy
               mountPath: /home/mitmproxy/.mitmproxy
               subPath: .mitmproxy
@@ -34,6 +37,9 @@ spec:
               mountPath: /home/mitmproxy/addons
               subPath: addons
       volumes:
+        - name: mitmproxy-config
+          configMap:
+            name: mitmprox-config
         - name: mitmproxy
           hostPath:
             path: /var/openebs/local/mitmproxy
