update config for mitmproxy

--- a/kubernetes/apps/mitmproxy/kustomization.yaml
+++ b/kubernetes/apps/mitmproxy/kustomization.yaml
@@ -9,3 +9,5 @@ configMapGenerator:
     namespace: mitmproxy
     files:
       - config.yaml=config.yaml
+configurations:
+  - kustomizeconfig.yaml
