update config for mitmproxy

--- a/kubernetes/apps/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/mitmproxy/deployment.yaml
@@ -28,7 +28,7 @@ spec:
               protocol: TCP
           volumeMounts:
             - name: mitmproxy-config
-              mountPath: /home/mitmproxy/.mitmproxy/config.yaml
+              mountPath: /home/mitmproxy/.mitmproxy/
               subPath: .mitmproxy/config.yaml
             - name: mitmproxy
               mountPath: /home/mitmproxy/.mitmproxy
