--- a/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mitmproxy
-  namespace: mitmproxy
+  namespace: shitscreen
 spec:
   selector:
     matchLabels:
