--- a/kubernetes/apps/shitscreen/mitmproxy/kustomization.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/kustomization.yaml
@@ -1,13 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
   - deployment.yaml
   - service.yaml
 configMapGenerator:
   - name: mitmproxy-config
-    namespace: mitmproxy
+    namespace: shitscreen
     files:
-      - config.yaml=config.yaml
+      - config.yaml
 configurations:
   - kustomizeconfig.yaml
