--- a/kubernetes/apps/shitscreen/mitmproxy/service.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mitmproxy
-  namespace: mitmproxy
+  namespace: shitscreen
   labels:
     app: mitmproxy
   annotations:
