--- a/kubernetes/apps/shitscreen/namespace.yaml
+++ b/kubernetes/apps/shitscreen/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: mitmproxy
+  name: shitscreen
   labels:
     pod-security.kubernetes.io/enforce: privileged
