--- a/kubernetes/apps/shitscreen/kustomization.yaml
+++ b/kubernetes/apps/shitscreen/kustomization.yaml
@@ -2,4 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - shitscreen-git.yaml
+  - ks.yaml
   - mitmproxy/
