add shitscreen repo

--- a/kubernetes/apps/shitscreen/mitmproxy/kustomization.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/kustomization.yaml
@@ -10,5 +10,7 @@ configMapGenerator:
     namespace: shitscreen
     files:
       - config.yaml
+  - name: mitmproxy-addons
+    namespace: shitscreen
 configurations:
   - kustomizeconfig.yaml
