add shitscreen repo

--- a/kubernetes/apps/shitscreen/mitmproxy/kustomization.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/kustomization.yaml
@@ -12,5 +12,6 @@ configMapGenerator:
       - config.yaml
   - name: mitmproxy-addons
     namespace: shitscreen
+    files: []
 configurations:
   - kustomizeconfig.yaml
