add node to shitscreen

--- a/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
@@ -36,6 +36,9 @@ spec:
               subPath: .mitmproxy
             - name: mitmproxy-addons
               mountPath: /home/mitmproxy/addons
+            - name: node
+              mountPath: /socket
+              subPath: socket
         - name: node
           command:
             - tail
