add node to shitscreen

--- a/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
@@ -46,7 +46,7 @@ spec:
             - /dev/null
 #            - node
 #            - /node/server.js
-          image: node
+          image: ghcr.io/marcin795/shitscreen:latest
           volumeMounts:
             - mountPath: /node
               name: node
