--- a/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
@@ -14,6 +14,8 @@ spec:
         app: shitscreen
     spec:
       shareProcessNamespace: true
+      imagePullSecrets:
+        - name: ghcr-pull-secret
       containers:
         - name: mitmproxy
           tty: true
