--- a/kubernetes/apps/shitscreen/mitmproxy/service.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mitmproxy
+  name: shitscreen
   namespace: shitscreen
   labels:
-    app: mitmproxy
+    app: shitscreen
   annotations:
     io.cilium/lb-ipam-ips: 192.168.1.203
 spec:
@@ -16,5 +16,5 @@ spec:
       targetPort: 8081
       name: web
   selector:
-    app: mitmproxy
+    app: shitscreen
   type: LoadBalancer
