--- a/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
@@ -49,6 +49,7 @@ spec:
 #            - node
 #            - /node/server.js
           image: ghcr.io/marcin795/shitscreen:latest
+          imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /node
               name: node
