add node to shitscreen

--- a/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
@@ -21,6 +21,7 @@ spec:
           tty: true
           args:
             - mitmweb
+            - --anticache=true
             - --web-host
             - 0.0.0.0
           image: mitmproxy/mitmproxy
