--- a/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
+++ b/kubernetes/apps/shitscreen/mitmproxy/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           tty: true
           args:
             - mitmweb
-            - --anticache=true
+            - --set anticache=true
             - --web-host
             - 0.0.0.0
           image: mitmproxy/mitmproxy
