--- a/kubernetes/apps/arr/namespace.yaml
+++ b/kubernetes/apps/arr/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: plex
+  name: arr
   labels:
     pod-security.kubernetes.io/enforce: privileged
