--- a/kubernetes/apps/arr/plex/deployment.yaml
+++ b/kubernetes/apps/arr/plex/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: plex
-  namespace: plex
+  namespace: arr
 spec:
   selector:
     matchLabels:
