--- a/kubernetes/apps/arr/plex/ingress.yaml
+++ b/kubernetes/apps/arr/plex/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: plex-ingress
-  namespace: plex
+  namespace: arr
   annotations:
     kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
