--- a/kubernetes/apps/arr/plex/service.yaml
+++ b/kubernetes/apps/arr/plex/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: plex-service
-  namespace: plex
+  namespace: arr
   labels:
     app: plex
 spec:
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: plex-32400
-  namespace: plex
+  namespace: arr
   labels:
     app: plex
   annotations:
