update renovate I think

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,9 @@
     "config:recommended"
   ],
   "rangeStrategy": "pin",
+  "kubernetes_deployment": {
+    "fileMatch": ["(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$"]
+  },
   "flux": {
     "fileMatch": ["(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$"]
   },
