set plex to latest

--- a/kubernetes/apps/arr/plex/deployment.yaml
+++ b/kubernetes/apps/arr/plex/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: plex
-          image: plexinc/pms-docker
+          image: plexinc/pms-docker:latest
           ports:
             - containerPort: 32400
               hostPort: 32400
