add plex with helm

--- a/renovate.json
+++ b/renovate.json
@@ -18,5 +18,11 @@
   },
   "kustomize": {
     "fileMatch": ["(^|/)kustomization\\.ya?ml(?:\\.j2)?$"]
-  }
+  },
+  "packageRules": [
+    {
+      "matchPackageNames": ["plexinc/pms-docker"],
+      "versioning": "semver-coerced"
+    }
+  ]
 }
