--- a/kubernetes/infra/controller/csr-approver/kustomization.yaml
+++ b/kubernetes/infra/controller/csr-approver/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - release.yaml
+  - repository.yaml
 configMapGenerator:
   - name: kubelet-csr-approver-helm-values
     namespace: flux-system
