--- a/kubernetes/infra/controller/redis/kustomization.yaml
+++ b/kubernetes/infra/controller/redis/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - release.yaml
 secretGenerator:
   - name: redis-password
+    namespace: redis
     files:
       - redis-password.yaml
     options:
