--- a/kubernetes/infra/controller/redis/namespace.yaml
+++ b/kubernetes/infra/controller/redis/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: namespace
+  name: redis
   labels:
     pod-security.kubernetes.io/enforce: privileged
