--- a/kubernetes/apps.yaml
+++ b/kubernetes/apps.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: sops
+  name: apps
   namespace: flux-system
 spec:
   interval: 5m0s
-  path: ./kubernetes
+  path: ./apps
   prune: true
   sourceRef:
     kind: GitRepository
