--- a/kubernetes/infra-configs.yaml
+++ b/kubernetes/infra-configs.yaml
@@ -1,15 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: infra-configs
   namespace: flux-system
 spec:
-  interval: 5m0s
   dependsOn:
-    - name: infra-configs
-  path: ./apps
+    - name: infra-controllers
+  interval: 5m0s
+  path: ./infra/config
   prune: true
-  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
