--- a/kubernetes/infra-controllers.yaml
+++ b/kubernetes/infra-controllers.yaml
@@ -1,13 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: infra-controllers
   namespace: flux-system
 spec:
   interval: 5m0s
-  dependsOn:
-    - name: infra-configs
-  path: ./apps
+  path: ./infra/controllers
   prune: true
   wait: true
   sourceRef:
