--- a/infra/controllers/authentik/authentik-values.yaml
+++ b/infra/controllers/authentik/authentik-values.yaml
@@ -11,7 +11,8 @@ authentik:
   postgresql:
     host: postgres-service.postgres.svc.cluster.local
   redis:
-    host: redis-service.redis.svc.cluster.local:6379/5
+    host: redis-service.redis.svc.cluster.local
+    db: 5
 
 server:
   metrics:
