shorten kustomization intervals

--- a/infra/controllers/authentik/authentik-values.yaml
+++ b/infra/controllers/authentik/authentik-values.yaml
@@ -11,7 +11,7 @@ authentik:
   postgresql:
     host: postgres-service.postgres.svc.cluster.local
   redis:
-    host: redis-service.redis.svc.cluster.local
+    host: redis-master.redis.svc.cluster.local
     db: '5'
 
 server:
