shorten kustomization intervals

--- a/kubernetes/infra-controllers.yaml
+++ b/kubernetes/infra-controllers.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m0s
+  timeout: 1m30s
   path: ./infra/controllers
   prune: true
   wait: true
