add certmanager to authentik ingress

--- a/infra/controllers/authentik/authentik-values.yaml
+++ b/infra/controllers/authentik/authentik-values.yaml
@@ -20,6 +20,8 @@ server:
   ingress:
     enabled: true
     ingressClassName: traefik
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
     hosts:
       - authentik.boomerok.dev
     tls:
