--- a/apps/arr/plex/kustomization.yaml
+++ b/apps/arr/plex/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - pv.yaml
   - pvc.yaml
+  - ingress.yaml
   - repository.yaml
   - release.yaml
 configMapGenerator:
