--- a/apps/arr/plex/ingress.yaml
+++ b/apps/arr/plex/ingress.yaml
@@ -10,6 +10,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.middlewares: combined-middleware@kubernetescrd
 spec:
   ingressClassName: traefik
