--- a/apps/arr/plex/ingress.yaml
+++ b/apps/arr/plex/ingress.yaml
@@ -3,15 +3,15 @@ kind: Ingress
 metadata:
   name: plex-ingress
   namespace: arr
-  labels:
-    app: plex-media-server
-    app.kubernetes.io/instance: plex
-    app.kubernetes.io/name: plex-media-server
+#  labels:
+#    app: plex-media-server
+#    app.kubernetes.io/instance: plex
+#    app.kubernetes.io/name: plex-media-server
   annotations:
-    kubernetes.io/ingress.class: traefik
+#    kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.middlewares: combined-middleware@kubernetescrd
+#    traefik.ingress.kubernetes.io/router.middlewares: combined-middleware@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
