--- a/apps/arr/plex/ingress.yaml
+++ b/apps/arr/plex/ingress.yaml
@@ -3,15 +3,14 @@ kind: Ingress
 metadata:
   name: plex-ingress
   namespace: arr
-#  labels:
-#    app: plex-media-server
-#    app.kubernetes.io/instance: plex
-#    app.kubernetes.io/name: plex-media-server
+  labels:
+    app: plex-media-server
+    app.kubernetes.io/instance: plex
+    app.kubernetes.io/name: plex-media-server
   annotations:
-#    kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-#    traefik.ingress.kubernetes.io/router.middlewares: combined-middleware@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: combined-middleware@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
@@ -22,16 +21,16 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: plex-service
+                name: plex-plex-media-server
                 port:
                   number: 32400
-#          - path: /outpost.goauthentik.io/
-#            pathType: Prefix
-#            backend:
-#              service:
-#                name: authentik-server
-#                port:
-#                  number: 9000
+          - path: /outpost.goauthentik.io/
+            pathType: Prefix
+            backend:
+              service:
+                name: authentik-server
+                port:
+                  number: 9000
   tls:
     - secretName: plex-tls
       hosts:
