--- a/apps/arr/plex/ingress.yaml
+++ b/apps/arr/plex/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.middlewares: combined-middleware@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-combined-middleware@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
