--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -16,16 +16,7 @@ ports:
       default: false
       internal: true
 
-#    internal:
-#      type: LoadBalancer
-#      spec:
-#        loadBalancerIP: "192.168.1.3"
-#        ports:
-#          - name: web
-#            port: 80
-#            protocol: TCP
-#            targetPort: web
-#          - name: websecure
-#            port: 443
-#            protocol: TCP
-#            targetPort: websecure
+providers:
+  kubernetesCRD:
+    enabled: true
+    allowCrossNamespace: true
