--- a/infra/controllers/authentik/namespace.yaml
+++ b/infra/controllers/authentik/namespace.yaml
@@ -3,4 +3,5 @@ kind: Namespace
 metadata:
   name: authentik
   labels:
+    pod-security.kubernetes.io/enforce: privileged
     kustomize.toolkit.fluxcd.io/prune: disabled
