enable AUTHENTIK_TRUST_PROXY_HEADERS=true

--- a/infra/controllers/authentik/authentik-values.yaml
+++ b/infra/controllers/authentik/authentik-values.yaml
@@ -2,6 +2,9 @@ global:
   addPrometheusAnnotations: true
   additionalLabels:
     app: authentik
+  env:
+    - name: AUTHENTIK_TRUST_PROXY_HEADERS
+      value: true
   envFrom:
     - secretRef:
         name: authentik-secrets
