enable AUTHENTIK_TRUST_PROXY_HEADERS=true

--- a/infra/controllers/authentik/authentik-values.yaml
+++ b/infra/controllers/authentik/authentik-values.yaml
@@ -4,7 +4,7 @@ global:
     app: authentik
   env:
     - name: AUTHENTIK_TRUST_PROXY_HEADERS
-      value: true
+      value: 'true'
   envFrom:
     - secretRef:
         name: authentik-secrets
