--- a/infra/controllers/cilium/cilium-values.yaml
+++ b/infra/controllers/cilium/cilium-values.yaml
@@ -9,6 +9,12 @@ cgroup:
 operator:
   replicas: 1
 
+hubble:
+  ui:
+    enabled: true
+    service:
+      type: LoadBalancer
+
 kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
 k8sServiceHost: 127.0.0.1
 k8sServicePort: 7445
