--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -17,5 +17,7 @@ spec:
               protocol: TCP
             - port: "8080"
               protocol: TCP
+            - port: "9000"
+              protocol: TCP
           rules:
             http: [{}]
