add network policy

--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: authentik
 spec:
   description: "Allow all traffic in both directions on all ports for both TCP and UDP"
+  endpointSelector:
+    matchLabels: {}
   ingress:
     - toPorts:
         - ports:
