--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -14,6 +14,12 @@ spec:
               protocol: TCP
             - port: "0"
               protocol: UDP
+          rules:
+            http:
+              - method: GET
+              - method: POST
+              - method: PUT
+              - method: DELETE
   egress:
     - toPorts:
         - ports:
