--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   description: "Allow all traffic in both directions on all ports for both TCP and UDP"
   endpointSelector:
-    matchLabels: {}
+    matchLabels:
+      app: authentik
   ingress:
     - toPorts:
         - ports:
