--- a/infra/controllers/cilium/cilium-values.yaml
+++ b/infra/controllers/cilium/cilium-values.yaml
@@ -52,6 +52,10 @@ securityContext:
       - SYS_ADMIN
       - SYS_RESOURCE
 
+loadBalancer:
+  l7:
+    backend: envoy
+
 envoy:
   enabled: true
   xffNumTrustedHopsL7PolicyIngress: 4
