--- a/infra/controllers/cilium/cilium-values.yaml
+++ b/infra/controllers/cilium/cilium-values.yaml
@@ -52,9 +52,9 @@ securityContext:
       - SYS_ADMIN
       - SYS_RESOURCE
 
-loadBalancer:
-  l7:
-    backend: envoy
+#loadBalancer:
+#  l7:
+#    backend: envoy
 
 envoy:
   enabled: true
