--- a/infra/controllers/authentik/namespace.yaml
+++ b/infra/controllers/authentik/namespace.yaml
@@ -5,3 +5,5 @@ metadata:
   labels:
     pod-security.kubernetes.io/enforce: privileged
     kustomize.toolkit.fluxcd.io/prune: disabled
+  annotations:
+    sidecar.cilium.io/inject: 'true'
