--- a/infra/controllers/authentik/authentik-values.yaml
+++ b/infra/controllers/authentik/authentik-values.yaml
@@ -1,5 +1,7 @@
 global:
   addPrometheusAnnotations: true
+  annotations:
+    sidecar.cilium.io/inject: 'true'
   additionalLabels:
     app: authentik
   env:
